modification pom pour msi + ajout logo.ico